Updated Edit page
